--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Fresh Coffee</span>
+                            <span class="section-heading-upper"></span>
                             <span class="section-heading-lower">¿En qué programo?</span>
                         </h2>
                         <p class="mb-3">programo en visual studio code, se utilizar HTML 5, CSS 3 y con ganas de aprender más lenguajes de programación</p>
